<resources>
    <string name="app_name">Todo App</string>
    <string name="create">Create</string>
    <string name="account">Account</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="arrow"><![CDATA[->]]></string>
    <string name="sign_in">Sign in</string>
    <string name="forgotpassword">ForgotPassword</string>
    <string name="welcome">Welcome</string>
    <string name="back">Back</string>
    <string name="add">Add 🤪</string>
    <string name="task">Task</string>
    <string name="todo">ToDo</string>
</resources>