<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" android:background="@color/white">

    <LinearLayout
        android:id="@+id/welcomeBack"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#1B1B1B">



        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/todo"
            android:layout_marginTop="160sp"
            android:textSize="40sp"
            android:layout_marginStart="25sp"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-thin"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="15sp"
        app:layout_constraintTop_toBottomOf="@+id/welcomeBack">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task"
            android:textColor="@color/black"
            android:textSize="22sp"/>

        <EditText
            android:id="@+id/task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:textColor="@color/black"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:inputType="textPersonName"
            android:autofillHints="@string/add"
            tools:ignore="LabelFor" />

        <Button
            android:backgroundTint="#1B1B1B"
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="addTodo"
            android:textColor="@color/white"
            android:text="@string/add" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>